--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -12,11 +12,5 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <string name="app_short_description">A canvas you can draw on with different colors.</string>
-    <string name="app_long_description">
-        Want to draw something but you have no paper? This app will suit you perfectly. Just pick a color and draw. You can either save the drawing or share it directly through email or social networks.
-
-        Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors.
-
-        This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
-    </string>
+    <string name="app_long_description">Vuoi disegnare qualcosa ma non hai carta? Questa app fa per te. Devi solo selezionare un colore e disegnare. Puoi salvare i disegni o condividerli direttamente via email o sui social network.          Non contiene pubblicità   né richiede permessi non necessari. È completamente open source e permette di cambiare i colori.          Quest\'app è solo un pezzo di una serie più grande di app. Puoi vedere le rimanenti au http://www.simplemobiletools.com</string>
 </resources>
