--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,16 +1,16 @@
 <resources>
-    <string name="app_name">Simple Draw</string>
-    <string name="app_launcher_name">Draw</string>
-    <string name="open_file">Open file</string>
-    <string name="eraser">Eraser</string>
-    <string name="failed_to_load_image">Failed to load image %s</string>
+    <string name="app_name">Simple Disegna</string>
+    <string name="app_launcher_name">Disegna</string>
+    <string name="open_file">Apri file</string>
+    <string name="eraser">Gomma</string>
+    <string name="failed_to_load_image">Impossibile caricare l'immagine %s</string>
 
     <!-- Settings -->
-    <string name="show_brush_size">Show brush size tool</string>
-    <string name="clear">Clear</string>
-    <string name="change_background_color">Change background color</string>
+    <string name="show_brush_size">Dimensione gomma</string>
+    <string name="clear">Pulisci</string>
+    <string name="change_background_color">Cambia colore di sfondo</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
-    <string name="app_short_description">A canvas you can draw on with different colors.</string>
-    <string name="app_long_description">Vuoi disegnare qualcosa ma non hai carta? Questa app fa per te. Devi solo selezionare un colore e disegnare. Puoi salvare i disegni o condividerli direttamente via email o sui social network.          Non contiene pubblicità   né richiede permessi non necessari. È completamente open source e permette di cambiare i colori.          Quest\'app è solo un pezzo di una serie più grande di app. Puoi vedere le rimanenti au http://www.simplemobiletools.com</string>
+    <string name="app_short_description">Una tela su cui puoi disegnare con diversi colori.</string>
+    <string name="app_long_description">Vuoi disegnare qualcosa ma non hai carta? Quest\'app fa per te. Devi solo selezionare un colore e disegnare. Puoi salvare i disegni o condividerli direttamente via email o sui social network.          Non contiene pubblicità né richiede permessi non necessari. È completamente open source e permette di cambiare i colori.          Quest\'app è solo un pezzo di una serie più grande di app. Puoi vedere le rimanenti su http://www.simplemobiletools.com</string>
 </resources>
